force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Case__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Time_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>