force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Contact__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Time_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>