force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Cycle_Time_Weekdays__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Cycle_Time_Weekdays__c</fullName>
    <formula>IF( Flowdometer__Most_Recent_Step__r.Flowdometer__Terminal_Stage__c ,
   Flowdometer__Handle_Time_To_Current_Step_Weekdays__c ,
  Flowdometer__Handle_Time_To_Current_Step_Weekdays__c +  Flowdometer__Most_Recent_Step__r.Flowdometer__Handle_Time_Weekdays__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Time (weekdays)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>