force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Days_Open_Since_Creation__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Days_Open_Since_Creation__c</fullName>
    <formula>(Flowdometer__Flow_Completion_Date_or_NOW__c -  Flowdometer__Flow_Creation_Date_or_CREATED__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open Since Creation</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>