force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Days_since_Completion__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Days_since_Completion__c</fullName>
    <formula>IF(
	NOT(ISBLANK(Flowdometer__Flow_Completion_Date__c)),
	IF(
		Flowdometer__Flow_Completion_Date__c &lt; NOW(),
		NOW() - Flowdometer__Flow_Completion_Date__c,
		null
	),
	null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If finished, the number of days since it finished. Can be used to clean up old data no longer needed</inlineHelpText>
    <label>Days Since Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>