force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Days_to_first_Step__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Days_to_first_Step__c</fullName>
    <description>Time from start of process to first Step change (in days)</description>
    <formula>Flowdometer__First_Step_Taken_at_or_NOW__c - Flowdometer__Flow_Creation_Date_or_CREATED__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time from start of process to first Step change (in days)</inlineHelpText>
    <label>Response Time (days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>