force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Days_to_first_Step_Weekdays__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Days_to_first_Step_Weekdays__c</fullName>
    <description>Time from start of process to first Step change (in weekdays). Note that weekday calculations round up to the nearest whole day</description>
    <formula>(5 * ( FLOOR( ( DATEVALUE(Flowdometer__First_Step_Taken_at_or_NOW__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(Flowdometer__First_Step_Taken_at_or_NOW__c) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE(Flowdometer__Flow_Creation_Date_or_CREATED__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(Flowdometer__Flow_Creation_Date_or_CREATED__c) - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time from start of process to first Step change (in weekdays). Note that weekday calculations round up to the nearest whole day</inlineHelpText>
    <label>Response Time (weekdays)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>