force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__First_Step_Taken_at__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__First_Step_Taken_at__c</fullName>
    <label>First Step Taken At</label>
    <summarizedField>Flowdometer__Step__c.Flowdometer__Field_Value_Ending_Timestamp__c</summarizedField>
    <summaryForeignKey>Flowdometer__Step__c.Flowdometer__Flow__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>