force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__First_Step_Taken_at_or_NOW__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__First_Step_Taken_at_or_NOW__c</fullName>
    <description>Used in other formulas for error handling</description>
    <formula>IF(ISBLANK( Flowdometer__First_Step_Taken_at__c ), NOW(), Flowdometer__First_Step_Taken_at__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Step Taken At or NOW</label>
    <type>DateTime</type>
</CustomField>