force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Flow_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Flow_Completion_Date__c</fullName>
    <inlineHelpText>Latest date a terminal Step was reached</inlineHelpText>
    <label>Flow Completion Date</label>
    <summarizedField>Flowdometer__Step__c.Flowdometer__Field_Value_Initial_Timestamp__c</summarizedField>
    <summaryFilterItems>
        <field>Flowdometer__Step__c.Flowdometer__Terminal_Stage__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Flowdometer__Step__c.Flowdometer__Flow__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>