force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Flow_Completion_Date_or_NOW__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Flow_Completion_Date_or_NOW__c</fullName>
    <formula>IF(ISBLANK( Flowdometer__Flow_Completion_Date__c ), NOW(), Flowdometer__Flow_Completion_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flow Completion Date or NOW</label>
    <type>DateTime</type>
</CustomField>