force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Flow_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Flow_Creation_Date__c</fullName>
    <label>Flow Creation Date</label>
    <summarizedField>Flowdometer__Step__c.Flowdometer__Field_Value_Initial_Timestamp__c</summarizedField>
    <summaryForeignKey>Flowdometer__Step__c.Flowdometer__Flow__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>