force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Goal__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goal</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value must be of &quot;Goal&quot; Record Type</errorMessage>
        <filterItems>
            <field>Flowdometer__Flow__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Goal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Flowdometer__Flow__c</referenceTo>
    <relationshipName>Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>