force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Goal_Total_Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Goal_Total_Handle_Time__c</fullName>
    <inlineHelpText>Total time your process should take. This field is expressed in the Units used on the Goal object</inlineHelpText>
    <label>Goal Cycle Time</label>
    <summarizedField>Flowdometer__Step__c.Flowdometer__Goal_Field_Change_Handle_Time_Hrs__c</summarizedField>
    <summaryForeignKey>Flowdometer__Step__c.Flowdometer__Flow__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>