force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Handle_Time_To_Current_Step_Weekdays__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Handle_Time_To_Current_Step_Weekdays__c</fullName>
    <label>Handle Time To Current Step (weekdays)</label>
    <summarizedField>Flowdometer__Step__c.Flowdometer__Final_Handle_Time_Weekdays__c</summarizedField>
    <summaryForeignKey>Flowdometer__Step__c.Flowdometer__Flow__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>