force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Handle_Time_vs_Goal__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Handle_Time_vs_Goal__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(Flowdometer__Goal__r.Flowdometer__Goal_Total_Handle_Time__c)),
    NOT(ISBLANK(Flowdometer__Total_Handle_Time__c)),
    NOT(Flowdometer__Goal__r.Flowdometer__Goal_Total_Handle_Time__c = 0),
    NOT(ISBLANK(TEXT(Flowdometer__Most_Recent_Step__r.Flowdometer__Goal_Measured_In_units__c)))
  ),   
  CASE(TEXT(Flowdometer__Most_Recent_Step__r.Flowdometer__Goal_Measured_In_units__c),
    &quot;Hours&quot;, (Flowdometer__Total_Handle_Time__c * 24),
    &quot;Days&quot;, Flowdometer__Total_Handle_Time__c,
    &quot;Weekdays&quot;,  Flowdometer__Cycle_Time_Weekdays__c   ,
    null
    )/ Flowdometer__Goal__r.Flowdometer__Goal_Total_Handle_Time__c 
  ,null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total time spent in this process as compared with the goal for cycle time</inlineHelpText>
    <label>Cycle Time vs Goal</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>