force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Hours_Since_Created__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Hours_Since_Created__c</fullName>
    <formula>Flowdometer__Days_Open_Since_Creation__c *24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Open Since Created</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>