force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Hours_to_First_Step__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Hours_to_First_Step__c</fullName>
    <formula>Flowdometer__Days_to_first_Step__c * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Time (hours)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>