force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Match_Goal_with_Flows__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Match_Goal_with_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this checkbox to connect this goal to any flows that match</inlineHelpText>
    <label>Match Goal with Flows?</label>
    <type>Checkbox</type>
</CustomField>