force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Most_Recent_Step__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Most_Recent_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Step</label>
    <referenceTo>Flowdometer__Step__c</referenceTo>
    <relationshipLabel>Flows</relationshipLabel>
    <relationshipName>Steps4</relationshipName>
    <type>Lookup</type>
</CustomField>