force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Name_of_Tracked_Record__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Name_of_Tracked_Record__c</fullName>
    <label>Name of Tracked Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>