force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Time_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>