force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Steps_in_Flow__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Steps_in_Flow__c</fullName>
    <label>Steps in Flow</label>
    <summaryForeignKey>Flowdometer__Step__c.Flowdometer__Flow__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>