force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Total_Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Total_Handle_Time__c</fullName>
    <formula>IF( Flowdometer__Most_Recent_Step__r.Flowdometer__Terminal_Stage__c ,
  Flowdometer__Handle_Time_To_Current_Step__c,
  Flowdometer__Handle_Time_To_Current_Step__c + Flowdometer__Most_Recent_Step__r.Flowdometer__Step_Handle_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Time (days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>