force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Tracked_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Tracked_Field_Name__c</fullName>
    <inlineHelpText>API Name of the field where changes are tracked</inlineHelpText>
    <label>Tracked Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>