force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Tracked_Object__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Tracked_Object__c</fullName>
    <inlineHelpText>API Name of the Object being tracked</inlineHelpText>
    <label>Tracked Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>