force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Tracked_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Tracked_Object_ID__c</fullName>
    <inlineHelpText>ID of the Tracked Object instance</inlineHelpText>
    <label>Tracked Object ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>