force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Tracked_Object_Link__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Tracked_Object_Link__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/&quot;+Flowdometer__Tracked_Object__c+&quot;/&quot;+Flowdometer__Tracked_Object_ID__c+&quot;/view&quot;, &quot;Tracked &quot;+ Flowdometer__Tracked_Object__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracked Object Link</label>
    <type>Text</type>
</CustomField>