force-app/main/default/objects/Flowdometer__Flow__c/fields/Flowdometer__Type__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Type__c</fullName>
    <inlineHelpText>Used to split different types of processes handled within the same object. If your process was held in an Onboarding object, you might have a Customer and Partner type of process, for example.</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>