force-app/main/default/objects/Flowdometer__Flow__c/recordTypes/Flowdometer__Tracker.recordType-meta.xml
<RecordType>
    <fullName>Flowdometer__Tracker</fullName>
    <active>true</active>
    <label>Tracker</label>
</RecordType>