force-app/main/default/objects/Flowdometer__Flow__c/listViews/Flowdometer__All.listView-meta.xml
<ListView>
    <fullName>Flowdometer__All</fullName>
    <columns>NAME</columns>
    <columns>Flowdometer__Tracked_Object_Link__c</columns>
    <columns>Flowdometer__Type__c</columns>
    <columns>Flowdometer__isGoal__c</columns>
    <columns>Flowdometer__Steps_in_Flow__c</columns>
    <columns>Flowdometer__Total_Handle_Time__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>