force-app/main/default/objects/Flowdometer__Flow__c/listViews/Flowdometer__Goals.listView-meta.xml
<ListView>
    <fullName>Flowdometer__Goals</fullName>
    <columns>NAME</columns>
    <columns>Flowdometer__Tracked_Object__c</columns>
    <columns>Flowdometer__Tracked_Field_Name__c</columns>
    <columns>Flowdometer__Type__c</columns>
    <columns>Flowdometer__Steps_in_Flow__c</columns>
    <columns>Flowdometer__Total_Handle_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Flowdometer__Flow__c.Flowdometer__Goal</value>
    </filters>
    <label>Edit Goals</label>
</ListView>