force-app/main/default/objects/Flowdometer__Flow__c/listViews/Flowdometer__With_Goals.listView-meta.xml
<ListView>
    <fullName>Flowdometer__With_Goals</fullName>
    <columns>NAME</columns>
    <columns>Flowdometer__Goal__c</columns>
    <columns>Flowdometer__Tracked_Object_Link__c</columns>
    <columns>Flowdometer__Type__c</columns>
    <columns>Flowdometer__Steps_in_Flow__c</columns>
    <columns>Flowdometer__Total_Handle_Time__c</columns>
    <columns>Flowdometer__Handle_Time_vs_Goal__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Flowdometer__Goal__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Flowdometer__Flow__c.Flowdometer__Tracker</value>
    </filters>
    <label>With Goals</label>
</ListView>